--- a/Hello/templates/base.html
+++ b/Hello/templates/base.html
@@ -46,7 +46,9 @@
     </div>
   </div>
 </nav>
-{% block body %} This is my body{% endblock body %}
+{% block body %}
+
+{% endblock body %}
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -57,6 +59,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
     -->
+    {% block js %}
+      console.log('working');
+    {% endblock js %}
   </body>
   <!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted">
