--- a/Hello/templates/base.html
+++ b/Hello/templates/base.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css"
     integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" rel="stylesheet">
 
   <title>{% block title %}{% endblock title %} | Ashrot IceCreams</title>
   <style>
@@ -19,16 +20,16 @@
       display: block;
       text-align: center;
       color: #fff;
-      background-color: black;
+      background-color:#800000;
       width: 20px;
-      height: 25px;
+      height: 20px;
       border-radius: 50%;
       font-size: 14px;
       margin-left: 5px;
     }
 
     .cart-icon {
-      width: 25px;
+      width: 50px;
       display: inline-block;
       margin-left: 15px;
       color: #800000;
@@ -69,30 +70,18 @@
             <a class="nav-link" href="/contact">Contact Us</a>
           </li>
         </ul>
-        <button type="button" class="btn" id="pop" data-bs-container="body" data-bs-toggle="popover"
-          data-bs-placement="bottom" data-bs-content="Bottom popover">
-          <span id="cart_quantity1" class="cart_count">0</span>
-          <svg class="cart-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-            class="bi bi-cart-fill" viewBox="0 0 16 16">
-            <path
-              d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-          </svg>
-        </button>
 
+        <a href="/cart" class="cart-icon" id="pop">
+          <span id="cart_quantity" class="cart_count">0</span>
+          <i class="fas fa-cart-plus"></i>
+        </a>
       </div>
     </div>
+    </div>
   </nav>
-  <div>
-  <button  type="button" class="btn fixed-bottom" id="pop" data-bs-container="body" data-bs-toggle="popover"
-          data-bs-placement="bottom" data-bs-content="Bottom popover">
-          <span id="cart_quantity" class="cart_count">0</span>
-          <svg class="cart-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-            class="bi bi-cart-fill" viewBox="0 0 16 16">
-            <path
-              d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-          </svg>
-        </button>
-      </div>
+  
+
+    
   {% block body %}
 
   {% endblock body %}
